# rust-to-do

./: Cargo.toml  Makefile  README.md
src/: cli.rs  main.rs  model.rs  storage.rs
tests/: cli.rs
